# cmake-hello-world

./: LICENSE  README.md
cproj/: CMakeLists.txt  main.cpp  util.h
